Added Quotation page translation

--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -31,5 +31,9 @@
     },
     "backMsgLogIn":{
         "error" : "Неправильний email або пароль"
+    },
+    "quotation": {
+        "quote" : "Книги - це кораблі думки, які мандрують по хвилях часу та дбайливо несуть свій дорогоцінний вантаж від покоління до покоління.",
+        "author" : "Бекон Ф."
     }
 }
