--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -31,5 +31,10 @@
     },
     "backMsgLogIn":{
         "error" : "Incorrect email or password"
+    },
+    "quotation": {
+        "quote" : "Books are the ships of thought, wandering through the waves of time and carefully carrying their precious cargo from generation to generation. ",
+        "author" : "F. Bacon"
     }
+    
 }
