--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -35,6 +35,21 @@
     "quotation": {
         "quote" : "Books are the ships of thought, wandering through the waves of time and carefully carrying their precious cargo from generation to generation. ",
         "author" : "F. Bacon"
+    },
+    "description" : {
+        "firstSubTitle" : "Helps you",
+
+        "goal" : "Formulate your goal faster and start reading",
+        "load" : "Proportionally distribute the load on each day",
+        "success" : "Track personal success",
+
+        "secondSubTitle" : "You can too",
+
+        "form" : "To form a personal opinion independent of others",
+        "skills" : "Improve your professional skills based on new knowledge",
+        "interlocutor" : "Become an interesting interlocutor",
+
+        "signUp" : "Registr" 
     }
     
 }
