--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -35,5 +35,21 @@
     "quotation": {
         "quote" : "Книги - це кораблі думки, які мандрують по хвилях часу та дбайливо несуть свій дорогоцінний вантаж від покоління до покоління.",
         "author" : "Бекон Ф."
+    },
+    "description" : {
+        "firstSubTitle" : "Допоможе вам",
+
+        "goal" : "Швидше сформулювати свою ціль і розпочати читати",
+        "load" : "Пропорційно розподілити навантаження на кожний день",
+        "success" : "Відстежувати особистий успіх",
+
+        "secondSubTitle" : "Також ви зможете",
+
+        "form" : "Формувати особисту думку незалежну від інших",
+        "skills" : "Підвищити свої професійні якості опираючись на нові знання",
+        "interlocutor" : "Стати цікавим співрозмовником",
+
+        "signUp" : "Реєстрація"
     }
+    
 }
