--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -23,7 +23,13 @@
         "nameMaxLenght" : "Поле має містити менше 15 літер",
         
         "confirmPassword" : "Потрібно підтвердити пароль",
-        "matchPassword" : "Паролі повинні збігатися"
+        "matchPassword" : "Паролі повинні збігатися",
+
+        "required" : "Oбов'язкове поле",
+        "length" : "* більше 1 букви",
+        "year" : "* max рік - поточний",
+        "pages" : "* max кількість- 5000"
+
     },
     "backMsgLogUp":{
         "success" : "Реєстрація виконана успішно !",
@@ -50,6 +56,12 @@
         "interlocutor" : "Стати цікавим співрозмовником",
 
         "signUp" : "Реєстрація"
-    }
-    
+    },
+    "addingBookForm" : {
+        "title" : "Назва книги",    
+        "author" : "Автор книги",    
+        "year" : "Рік випуску",    
+        "pages" : "Кількість сторінок",    
+        "button" : "Додати"       
+    }    
 }
