Fixed bug in header and added login notification

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,4 +1,7 @@
 {
+    "headerLogOut" : {
+        "logOut" : "Logout"
+    },
     "signInForm":{
        "emailLabel" : "Email Address",
        "passwordLabel" : "Password",
