--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -1,4 +1,6 @@
-{
+{   "headerLogOut" : {
+    "logOut" : "Вихід"
+    },
     "signInForm":{
        "emailLabel" : "Електронна адреса",
        "passwordLabel" : "Пароль",
