Fixed line ander Goout

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
     "headerLogOut" : {
-        "logOut" : "Logout"
+        "logOut" : "Goout"
     },
     "signInForm":{
        "emailLabel" : "Email Address",
