--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -65,5 +65,18 @@
         "year" : "Рік випуску",    
         "pages" : "Кількість сторінок",    
         "button" : "Додати"       
-    }    
+    },
+    "GoToRead":{
+        "header" : "Маю намір прочитати",
+        "year" : "Рік",
+        "pages" : "Стор.",
+        "author" : "Автор",
+        "title" : "Назва книги",
+        "button" : "Далі"
+    },
+    "GoToReadMobile":{
+        "year" : "Рік :",
+        "pages" : "Стор. :",
+        "author" : "Автор :"
+    }   
 }
