--- a/src/locales/ua/translation.json
+++ b/src/locales/ua/translation.json
@@ -90,7 +90,68 @@
         "button" : "Резюме"
     },   
     "currentlyReading" : {
-        "header" : "Читаю"
-      
-    }   
+        "header" : "Читаю" 
+    },
+    "alltimer" : {
+        "yearEnd": "До закінчення року залишилось",
+        "goalEnd" : "До досягнення мети залишилось"
+    },
+    "mytimer" : {
+        "days" : "ДН",
+        "hours" : "ГОД",
+        "min" : "ХВ",
+        "sec" : "СЕК"
+    },
+    "startgoals":{
+        "goal" : "Моя мета прочитати",
+        "books" : "Кількість книжок",
+        "days" : "Кількість днів"
+    },
+    "resultGoal" : {
+        "left" : "Залишилось книжок"
+    },
+    "alldatePicker" : {
+        "note" : "Дата початку більше дати завершення!",
+        "start" : "Початок",
+        "end" : "Завершення",
+        "header" : "Моє тренування",
+        "input" : "Обрати книги з бібліотеки"
+    },
+    "all":{
+        "pages" : "Стор.",
+        "year" : "Рік",
+        "author" : "Автор "
+    },
+    "chart" : {
+        "plan" : "ПЛАН",
+        "fact" : "ФАКТ",
+        "title" : "КІЛЬКІСТЬ СТОРІНОК / ДЕНЬ"
+    },
+    "training" :{
+        "button": "Почати тренування",
+        "warningStart" : "Виберіть дату початку",
+        "warningEnd" : "Виберіть дату завершення",
+        "select" : "Оберіть книгу",
+        "done" : "Книга вже додана у список"
+    },
+    "motivationExellent": {
+        "exellent": "Все суперово! Так тримати! Мета досягнута"
+    },
+    "libraryModal": {
+        "stepOne": "Крок 1.",
+        "create": "Створіть особисту бібліотеку",
+        "add": "Додайте до неї книжки, які маєте намір прочитати.",
+        "stepTwo": "Крок 2.",
+        "firstTraining": "Сформуйте своє перше тренування",
+        "goal": "Визначте ціль, оберіть період, розпочинайте тренування.",
+        "ok": "Ok"
+    },
+    "statistics": {
+        "results": "Результати",
+        "date": "Дата",
+        "pages": "Кількість сторінок",
+        "addResult": "Додати результат",
+        "statistic": "Статистика"
+    }
+
 }
