--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -89,7 +89,68 @@
         "button" : "Resume"
     },
     "currentlyReading" : {
-        "header" : "Currently Reading" 
-      
-    } 
+        "header" : "Currently Reading"   
+    },
+    "alltimer" : {
+        "yearEnd": "Left before the end of the year",
+        "goalEnd" : "Left before achieving the goal"
+    },
+    "mytimer" : {
+        "days" : "DAYS",
+        "hours" : "HOURS",
+        "min" : "MIN",
+        "sec" : "SEC"
+    },
+    "startgoals":{
+        "goal" : "My goal is to read",
+        "books" : "Number of books",
+        "days" : "Number of days"
+    },
+    "resultGoal" : {
+        "left" : "There are books left"
+    },
+    "alldatePicker": {
+        "note": "Start date is more than end date!",
+        "start": "Start date",
+        "end": "End date",
+        "header": "My training",
+        "input": "Select books from library"
+    },
+    "all":{
+        "pages" : "pages",
+        "year" : "year",
+        "author" : "Author "
+    },
+    "chart" : {
+        "plan" : "PLAN",
+        "fact" : "FACT",
+        "title" : "NUMBER OF PAGES / DAY"
+    },
+    "training": {
+        "button": "Start Training",
+        "warningStart": "Select start date",
+        "warningEnd": "Select end date",
+        "select": "Select a book",
+        "done": "Book has been added to list"
+    },
+    "motivationExellent": {
+        "exellent": "Excellent result! The goal has been achieved"
+    },
+    "libraryModal": {
+        "stepOne": "Step 1.",
+        "create": "Create a personal library",
+        "add": "Add books to it that you intend to read.",
+        "atepTwo": "Step 2.",
+        "firstTraining": "Create your first workout",
+        "goal": "Set a goal, choose a period, start training.",
+        "ok": "Ok"
+    },
+    "statistics": {
+        "results": "Results",
+        "date": "Date",
+        "pages": "Pages Quantity",
+        "addResult": "Add Result",
+        "statistic": "Statistic"
+    }
+
 }
